--- a/Evivah_Backend/src/main/resources/application.properties
+++ b/Evivah_Backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/project_test
+spring.datasource.url=jdbc:mysql://localhost:3306/weddingdb
 spring.datasource.username=root
 spring.datasource.password=manager
 
