--- a/evivah/package.json
+++ b/evivah/package.json
@@ -8,11 +8,15 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "@mui/x-data-grid": "^5.7.0",
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.26.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
+    "framer-motion": "^6.2.8",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "react": "^17.0.2",
@@ -23,6 +27,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
+    "recharts": "^2.1.9",
     "redux": "^4.1.2",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
